# Terrain-Generator

./: AUTHORS.rst  LICENSE.txt  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
ipynb/: basic-erosion.ipynb  noise.ipynb
src/terrain/: __init__.py  interpolation.py  skeleton.py
terrain/: noise.py
tests/: conftest.py  test_skeleton.py
