[tool.poetry]
name = "terrain"
version = "0.0.1"
description = "A library for procedurally generating realistic terrain."
authors = ["Matthew Miller <matthewm8m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.5.0"
numpy = "^1.19.0"
mayavi = "^4.7.1"
matplotlib = "^3.2.2"
pyqt5 = "^5.15.0"

[tool.poetry.dev-dependencies]
rope = "^0.17.0"
pylint = "^2.5.3"
jupyterlab = "^2.1.4"
pytest = "^5.4.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
